--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@ entity.components.sound.pauseSound();
 	<!-- camera and controls -->
 
 <a-entity>
-   <a-camera look-controls="pointerLockEnabled: true" mouse-cursor="" wasd-controls="acceleration: 300" position="46 4 40" camera="" rotation="90 0 0">
+   <a-camera look-controls="pointerLockEnabled: true" mouse-cursor="" wasd-controls="acceleration: 200" position="46 4 40" camera="" rotation="90 0 0">
       <a-cursor raycaster="far: 150; objects: .clickable" opacity="1" material="" cursor="fuse: true; fuseTimeout: 1000; primitive:ring; radiusOuter:.02; radiusInner:.015;segmentsTheta:32" material="color:#283644;shader:flat" geometry="" position="0 0 -.75"></a-cursor>
    </a-camera>
            </a-entity>
@@ -116,6 +116,7 @@ entity.components.sound.pauseSound();
 <a-gltf-model src="#barbell_model" dragndrop="" class="clickable" position="14.39595 -1.7733 19.18083" id="barbell" scale="2 2 1" rotation=""  track-cursor=""></a-gltf-model>
 <a-gltf-model src="#sanitizer_model" dragndrop="" class="clickable" position="45.93535 3.26892 14.4733" id="sanitizer" scale="" rotation="" gltf-model="assets/models/sanitizer/scene.gltf" track-cursor=""></a-gltf-model>
 <a-gltf-model src="#sanitizer_model" dragndrop="" class="clickable" position="41.07956 2.57203 33.49641" id="sanitizer-2" scale="" rotation="0 90 0" gltf-model="assets/models/sanitizer/scene.gltf" track-cursor=""></a-gltf-model>
+<a-text id="controls_txt" position="41.63324 4.13019 34.55494" color="white" align="center" text="color: #ffffff; value: Try clicking on the hand sanitizer, Switch, or weights (in the garage); side: double; transparent: false" rotation="0 -45 0"></a-text>
 <a-gltf-model src="#office_chair_model" position="-2.88419 -1.19131 -3.41822" id="office_chair" scale="3 3 3" visible="" class="clickable"></a-gltf-model>
 
 
